--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "lint": "stylelint ./src/**/*.css",
     "lintfix": "stylelint ./src/**/*.css --fix",
     "checkAll": "npm run check && npm run lint",
-    "fixAll": "npm run format && npm run lintfix"
+    "fixAll": "npm run format && npm run lintfix",
+    "build": "gulp build",
+    "dev": "gulp"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.29.3",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-plumber": "^1.2.1",
     "prettier": "^2.8.7",
     "stylelint": "^15.4.0"
   }
