--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo 'Привет!'",
-    "check": "prettier --check ./src/**/*.{html,css,js}",
+    "check": "prettier --check ./**/*.{html,css,js}",
     "format": "prettier --write ./src/**/*.{html,css,js}",
-    "lint": "stylelint ./src/**/*.css",
-    "lintfix": "stylelint ./src/**/*.css --fix",
+    "lint": "stylelint ./**/*.css",
+    "lintfix": "stylelint ./**/*.css --fix",
     "checkAll": "npm run check && npm run lint",
     "fixAll": "npm run format && npm run lintfix",
     "build": "gulp build",
